--- a/HTML/proyectos-practicos/multimedia02.html
+++ b/HTML/proyectos-practicos/multimedia02.html
@@ -10,19 +10,22 @@
     <h1>Prueba de Multimedia 2</h1>
     <p>voy a probar si me aprendi a hacerlo bien</p>
 
-    <div>
+    <figure>
+        <h2>Imagen de Boxeo</h2>
         <img src="https://thankful-crystal-c5f59294d4.media.strapiapp.com/Dmitry_Bivol_Artur_Beterbiev_c75a9b7069.jpg" alt="boxeo profesional" width="300">
-    </div>
+    </figure>
 
-    <div>
+    <section>
+        <h2>audio y video</h2>
         <audio src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" controls></audio>
-    </div>
+    
 
-    <div>
+    
         <video src="https://www.w3schools.com/html/mov_bbb.mp4" controls width="400"></video>
-    </div>
+    </section>
 
-    <div>
+    <section>
+        <h2>Video de Youtube</h2>
         <iframe 
     width="560" 
     height="315" 
@@ -32,6 +35,6 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
     allowfullscreen>
 </iframe>
-    </div>
+    </section>
 </body>
 </html>
