Mi proyecto final de html
hice un proyecto final de mi curso de html la verdad estoy satisfecho con lo que logre estoy aprendiendo poco a poco pero estoy contento con mi progreso

--- a/HTML/proyectos-practicos/Notas-y-ejemplos/meta-etiquetas.html
+++ b/HTML/proyectos-practicos/Notas-y-ejemplos/meta-etiquetas.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meta-Etiquetas</title>
 </head>
+
 <body>
     <h2>Que son las metaetiquetas</h2>
     <p>las metaetiquetas son informacion que no se puede ver pero le dicen al
@@ -41,6 +42,9 @@
                 <tr>
                     <td>meta name="description" content="descripcion"</td>
                     <td>lo que google muestra al buscador tu pagina</td>
+                    <!--mejora el seo y de paso-->
+                    <!--escribir una frase corta que diga de que trata tu web-->
+                    <!--ejemplo:Soy Alvaro Rivas programador autodidacta boxeador amateur. Este es mi pagina personal-->
                 </tr>
             </tbody>
             <tbody>
