--- a/HTML/HTML_CSS_Notes_Examples/semantica.html
+++ b/HTML/HTML_CSS_Notes_Examples/semantica.html
@@ -75,8 +75,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta="UTF-8">
+    <meta name="" content="width=device-width, initial-scale=1.0">
     <title>Mi página semántica</title>
 </head>
 <body>
