--- a/HTML/Practical_Projects/forms.html
+++ b/HTML/Practical_Projects/forms.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="campo">
-            <label for="email">Correo:</label>
+            <label for="correo">Correo:</label>
                 <input type="email" id="correo" name="correo"
                 required>
         </div>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="campo">
-            <label for="telefono">Telefeno:</label>
+            <label for="telefono">Teléfono:</label>
             <input type="tel" id="telefono" name="telefono">
         </div>
         <button type="submit">Enviar</button>
