--- a/HTML/Practical_Projects/index.html
+++ b/HTML/Practical_Projects/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="contenedor-desafio ">
+    <p class=" parrafo-interno " > SOYROJOOOOOOOO </p>
+    </div>
     <h1>Welcome to my gallery of digital art</h1>
     <p>Explore some of my favorite creations</p>
     <section class="photo-gallery">
