--- a/HTML/Practical_Projects/Biografia.html
+++ b/HTML/Practical_Projects/Biografia.html
@@ -39,10 +39,10 @@ el titulo de arriba, como se llama la pagina-->
         <h2>imagenes mias y de mi familia
             <div class="fila-flex">
             
-            <img src="imagenes_de_familia/20250531_202855.jpg"
+            <img src="C:\Users\alvar\Desktop\Practical_Projects\imagenes\20250531_202855.jpg"
             alt="mami"width="160">
-            <img src="imagenes_de_familia/IMG-20250615-WA0010.jpg"alt="ivan_papa_yo_luma"width="220">
-            <img src="imagenes_de_familia/IMG-20250615-WA0012.jpg"alt="Papa_y_Mama"width="220">
+            <img src="C:\Users\alvar\Desktop\Practical_Projects\imagenes\IMG-20250615-WA0010.jpg"alt="ivan_papa_yo_luma"width="220">
+            <img src="C:\Users\alvar\Desktop\Practical_Projects\imagenes\IMG-20250615-WA0012.jpg"alt="Papa_y_Mama"width="220">
             
             </div> 
         </section>
