--- a/HTML/Practical_Projects/boxmodel.html
+++ b/HTML/Practical_Projects/boxmodel.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="boxmodel.css">
 </head>
 <body>
-    <span>texto</span> <span>texto</span>
+    
     <div class="nose">
-        HOLAAAA
+        <p>¡Hola, soy un contenedor!"</p>
     </div>
 </body>
 </html>
