--- a/HTML/Practical_Projects/inlineinblock.html
+++ b/HTML/Practical_Projects/inlineinblock.html
@@ -15,5 +15,10 @@
         <li>aa</li>
         <li>aa</li>
     </ul>
+
+    <div class="contenedor-caja">
+        <p>Este es el contenido principal de la caja. Aquí hay texto de ejemplo para ver cómo se comporta el icono.</p>
+        <span class="icono-flotante">X</span>
+    </div>
 </body>
 </html>
