--- a/HTML/Practical_Projects/Biografia.html
+++ b/HTML/Practical_Projects/Biografia.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--la etiqueta doctype html indica a la pagina web que estamos 
 usando html5 osea el tipo de documento-->
-<html>
+<html lang="es">
+    <link rel="stylesheet" href="biografia.css">
 <!--html indica el lo que va a haber en el contenido-->
 <body>
     <main>
