Add responsive web design example and minor HTML update
Added Responsive-Web-Design.html and Responsive-Web-Design.css to demonstrate responsive layouts using CSS flexbox and media queries. Also commented out an example <img> tag in concepts.html for clarity.

--- a/HTML/HTML_CSS_Notes_Examples/concepts.html
+++ b/HTML/HTML_CSS_Notes_Examples/concepts.html
@@ -36,7 +36,7 @@ Ejemplos el contenido de una etiqueta <p> podria ser "esto es un parrafo"
 atributo es el valor adicional que se le puede anadir a una etiqueta para que proporcione informacion
 adicional. Por ejemplo: la etiqueta <img> puede tener un atributo "src" que indica la URL de la imagen
 para mostrar el codigo debe ser como algo asi 
-<img src="link del URL">
+<!--<img src="link del URL">-->
 
 4. Página Web
 Una página web es un documento electrónico escrito en lenguaje HTML
